--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "ISC",
   "scripts": {
     "start": "set NODE_ENV=development&& gulp",
-    "build": "set NODE_ENV=production gulp&& build"
+    "build": "set NODE_ENV=production&& gulp build"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
