--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "author": "albatros-ss",
   "license": "ISC",
   "scripts": {
-    "start": "set NODE_ENV=development&& gulp",
-    "build": "set NODE_ENV=production&& gulp build"
+    "start": "npm run env NODE_ENV==development && gulp",
+    "build": "npm run env NODE_ENV==production && gulp build"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
