--- a/package.json
+++ b/package.json
@@ -4,43 +4,44 @@
   "author": "albatros-ss",
   "license": "ISC",
   "scripts": {
-    "start": "set NODE_ENV=development&& gulp",
-    "build": "set NODE_ENV=production&& gulp build"
+    "start": "npm run env NODE_ENV==development && gulp",
+    "build": "npm run env NODE_ENV==production && gulp build"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
-    "browser-sync": "~2.24.4",
+    "browser-sync": "~2.24.6",
     "del": "~3.0.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "~5.0.0",
     "gulp-babel": "^7.0.1",
-    "gulp-cheerio": "~0.6.3",
+    "gulp-cheerio": "~0.6.2",
     "gulp-concat": "^2.6.1",
     "gulp-concat-css": "~3.1.0",
     "gulp-css-unit": "^1.2.2",
-    "gulp-csso": "^3.0.1",
+    "gulp-csso": "^3.0.0",
     "gulp-imagemin": "^4.1.0",
     "gulp-load-plugins": "~1.5.0",
+    "gulp-nodemon": "^2.2.1",
     "gulp-notify": "~3.2.0",
     "gulp-pug": "~4.0.1",
     "gulp-rename": "^1.3.0",
     "gulp-replace": "~1.0.0",
     "gulp-replace-task": "^0.11.0",
     "gulp-rigger": "^0.5.8",
-    "gulp-sass": "~4.0.1",
-    "gulp-sass-glob": "^1.0.9",
-    "gulp-sourcemaps": "~2.6.4",
+    "gulp-sass": "~4.0.0",
+    "gulp-sass-glob": "^1.0.8",
+    "gulp-sourcemaps": "~2.6.0",
     "gulp-svg-sprite": "~1.4.0",
-    "gulp-svgmin": "~1.2.4",
+    "gulp-svgmin": "~1.2.2",
     "gulp.spritesmith": "^6.9.0",
     "imagemin-jpeg-recompress": "^5.1.0",
-    "imagemin-pngquant": "^5.1.0",
+    "imagemin-pngquant": "^6.0.0",
     "merge-stream": "^1.0.1",
-    "uglifyjs-webpack-plugin": "^1.2.6",
-    "webpack-stream": "^4.0.3"
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "webpack-stream": "^5.0.0"
   },
   "dependencies": {
     "jquery": "~3.3.1",
