--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-concat-css": "^3.1.0",
     "gulp-css-unit": "^1.2.2",
     "gulp-csso": "^3.0.1",
+    "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.1.0",
     "gulp-load-plugins": "^1.5.0",
     "gulp-notify": "^3.2.0",
