--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "author": "albatros-ss",
   "license": "ISC",
   "scripts": {
-    "start_linux": "NODE_ENV=development gulp",
-    "build_linux": "NODE_ENV=production gulp build",
-    "start": "set NODE_ENV=development&& gulp",
-    "build": "set NODE_ENV=production&& gulp build"
+    "start": "cross-env NODE_ENV=development gulp",
+    "build": "cross-env NODE_ENV=production gulp build"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -16,6 +14,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.24.6",
     "del": "^3.0.0",
+    "cross-env": "^5.1.4",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "^7.0.1",
